understand en file

--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -13,6 +13,8 @@
             //Longest Streak
 -->
 
+<!-- class values associate to css file-->
+
 <form>
     <div class="col">
         <div class="row">
