--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -16,7 +16,24 @@
 <!-- class values associate to css file-->
 
 <form>
+    <div >
+        <ul >
+            <li>{{localize "DICE_STATS_TEXT.player-stats-button-title"}} : {{TESTROLLS[0]}}</li>
+            <li>{{localize "DICE_STATS_TEXT.player-stats-button-title"}} : {{localize TESTROLLS[1]}}</li>
+            <li>{{TESTROLLS[2]}}</li>
+            <li>{{TESTROLLS[3]}}</li>
+            <li>{{TESTROLLS[4]}}</li>
+            <li>{{TESTROLLS[5]}}</li>
+            <li>{{TESTROLLS[6]}}</li>
+            <li>{{TESTROLLS[7]}}</li>
+            <li>{{TESTROLLS[8]}}</li>
+            <li>{{TESTROLLS[9]}}</li>
+            <li>{{TESTROLLS[10]}}</li>
+            <li>{{TESTROLLS[11]}}</li>
+        </ul>
+    </div>
     <div class="col">
+        
         <div class="row">
             <h1>2D Dice Stats</h1>
             <canvas id="d4Chart"></canvas>
