Work on Handlebars Data Objects, Reorg some files

--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -1,17 +1,5 @@
 {{!-- {{log 'Input data' this}} --}}
-<!-- Displays Specific Player info. Default is Only GM can see other players stats -->
-
-<!-- Base Lauout of player data
-    //Player Data * x         
-        //D2 Info
-            //Graph of number of each rolls
-            //Mean, Median, Mode
-            //Longest Streak
-        //D3 Info
-            //Graph of number of each rolls
-            //Mean, Median, Mode
-            //Longest Streak
--->
+<!-- Displays Specific Player info -->
 
 <!-- class values associate to css file-->
 
