Fix various issues, Rolls Now Display on Window!

--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -19,99 +19,90 @@
         <h1>D-2 (COIN) Stats</h1>
         <div id = "d2Chart" style = "width: 550px; height: 400px; margin: 0 auto"></div>
         <ul class="flexcol">
-            <li>Mean (Avg)</li>
-            <li>Meadian (Middle Number)</li>
-            <li>Mode (Most Common)</li>
-            <li>Longest Streak</li>
-            <li>Put Streak Numbers HERE</li>
+            <li>Mean (Avg)              {{MEAN.[0]}}</li>
+            <li>Meadian (Middle Number) {{MEDIAN.[0]}}</li>
+            <li>Mode (Most Common)      {{MODE.[0]}}</li>
+            <li>Longest Streak          {{STREAK.[0]}}</li>
         </ul>
         <br>
 
         <h1>D-3 (Fate) Stats</h1>
         <div id = "d3Chart" style = "width: 550px; height: 400px; margin: 0 auto"></div>
         <ul class="flexcol">
-            <li>Mean (Avg)</li>
-            <li>Meadian (Middle Number)</li>
-            <li>Mode (Most Common)</li>
-            <li>Longest Streak</li>
-            <li>Put Streak Numbers HERE</li>
+            <li>Mean (Avg)              {{MEAN.[1]}}</li>
+            <li>Meadian (Middle Number) {{MEDIAN.[1]}}</li>
+            <li>Mode (Most Common)      {{MODE.[1]}}</li>
+            <li>Longest Streak          {{STREAK.[1]}}</li>
         </ul>
         <br>
         
         <h1>D-4 Stats</h1>
         <div id = "d4Chart" style = "width: 550px; height: 400px; margin: 0 auto"></div>
         <ul class="flexcol">
-            <li>Mean (Avg)</li>
-            <li>Meadian (Middle Number)</li>
-            <li>Mode (Most Common)</li>
-            <li>Longest Streak</li>
-            <li>Put Streak Numbers HERE</li>
+            <li>Mean (Avg)              {{MEAN.[2]}}</li>
+            <li>Meadian (Middle Number) {{MEDIAN.[2]}}</li>
+            <li>Mode (Most Common)      {{MODE.[2]}}</li>
+            <li>Longest Streak          {{STREAK.[2]}}</li>
         </ul>
         <br>
         
         <h1>D-6 Stats</h1>
         <div id = "d6Chart" style = "width: 550px; height: 400px; margin: 0 auto"></div>
         <ul class="flexcol">
-            <li>Mean (Avg)</li>
-            <li>Meadian (Middle Number)</li>
-            <li>Mode (Most Common)</li>
-            <li>Longest Streak</li>
-            <li>Put Streak Numbers HERE</li>
+            <li>Mean (Avg)              {{MEAN.[3]}}</li>
+            <li>Meadian (Middle Number) {{MEDIAN.[3]}}</li>
+            <li>Mode (Most Common)      {{MODE.[3]}}</li>
+            <li>Longest Streak          {{STREAK.[3]}}</li>
         </ul>
         <br>
         
         <h1>D-8 Stats</h1>
         <div id = "d8Chart" style = "width: 550px; height: 400px; margin: 0 auto"></div>
         <ul class="flexcol">
-            <li>Mean (Avg)</li>
-            <li>Meadian (Middle Number)</li>
-            <li>Mode (Most Common)</li>
-            <li>Longest Streak</li>
-            <li>Put Streak Numbers HERE</li>
+            <li>Mean (Avg)              {{MEAN.[4]}}</li>
+            <li>Meadian (Middle Number) {{MEDIAN.[4]}}</li>
+            <li>Mode (Most Common)      {{MODE.[4]}}</li>
+            <li>Longest Streak          {{STREAK.[4]}}</li>
         </ul>
         <br>
         
         <h1>D-10 Stats</h1>
         <div id = "d10Chart" style = "width: 550px; height: 400px; margin: 0 auto"></div>
         <ul class="flexcol">
-            <li>Mean (Avg)</li>
-            <li>Meadian (Middle Number)</li>
-            <li>Mode (Most Common)</li>
-            <li>Longest Streak</li>
-            <li>Put Streak Numbers HERE</li>
+            <li>Mean (Avg)              {{MEAN.[5]}}</li>
+            <li>Meadian (Middle Number) {{MEDIAN.[5]}}</li>
+            <li>Mode (Most Common)      {{MODE.[5]}}</li>
+            <li>Longest Streak          {{STREAK.[5]}}</li>
         </ul>
         <br>
         
         <h1>D-12 Stats</h1>
         <div id = "d12Chart" style = "width: 550px; height: 400px; margin: 0 auto"></div>
         <ul class="flexcol">
-            <li>Mean (Avg)</li>
-            <li>Meadian (Middle Number)</li>
-            <li>Mode (Most Common)</li>
-            <li>Longest Streak</li>
-            <li>Put Streak Numbers HERE</li>
+            <li>Mean (Avg)              {{MEAN.[6]}}</li>
+            <li>Meadian (Middle Number) {{MEDIAN.[6]}}</li>
+            <li>Mode (Most Common)      {{MODE.[6]}}</li>
+            <li>Longest Streak          {{STREAK.[6]}}</li>
         </ul>
         <br>
         
         <h1>D-20 Stats</h1>
         <div id = "d20Chart" style = "width: 550px; height: 400px; margin: 0 auto"></div>
         <ul class="flexcol">
-            <li>Mean (Avg)</li>
-            <li>Meadian (Middle Number)</li>
-            <li>Mode (Most Common)</li>
-            <li>Longest Streak</li>
-            <li>Put Streak Numbers HERE</li>
+            <li>Mean (Avg)              {{MEAN.[7]}}</li>
+            <li>Meadian (Middle Number) {{MEDIAN.[7]}}</li>
+            <li>Mode (Most Common)      {{MODE.[7]}}</li>
+            <li>Longest Streak          {{STREAK.[7]}}</li>
         </ul>
         <br>
         
         <h1>D-100 Stats</h1>
         <div id = "d100Chart" style = "width: 550px; height: 400px; margin: 0 auto"></div>
         <ul class="flexcol">
-            <li>Mean (Avg)</li>
-            <li>Meadian (Middle Number)</li>
-            <li>Mode (Most Common)</li>
-            <li>Longest Streak</li>
-            <li>Put Streak Numbers HERE</li>
+            <li>Mean (Avg)              {{MEAN.[8]}}</li>
+            <li>Meadian (Middle Number) {{MEDIAN.[8]}}</li>
+            <li>Mode (Most Common)      {{MODE.[8]}}</li>
+            <li>Longest Streak          {{STREAK.[8]}}</li>
         </ul>
     </div>
 
@@ -145,18 +136,65 @@
             chart.draw(data);
         }
 
+        function drawChartd4() {
+            // Define the chart to be drawn.
+            var data = google.visualization.arrayToDataTable([
+                ['Die Number', 'Number Of rolls'],
+                ['1',   {{D4_ROLL_DATA.[0]}}],
+                ['2',   {{D4_ROLL_DATA.[1]}}],
+                ['3',   {{D4_ROLL_DATA.[2]}}],
+                ['4',   {{D4_ROLL_DATA.[3]}}]
+            ]);
+
+            // Instantiate and draw the chart.
+            var chart = new google.visualization.ColumnChart(document.getElementById('d20Chart'));
+            chart.draw(data);
+        }
+
+        function drawChartd20() {
+            // Define the chart to be drawn.
+            var data = google.visualization.arrayToDataTable([
+                ['Die Number', 'Number Of rolls'],
+                ['1',   {{D20_ROLL_DATA.[0]}}],
+                ['2',   {{D20_ROLL_DATA.[1]}}],
+                ['3',   {{D20_ROLL_DATA.[2]}}],
+                ['4',   {{D20_ROLL_DATA.[3]}}],
+                ['5',   {{D20_ROLL_DATA.[4]}}],
+                ['6',   {{D20_ROLL_DATA.[5]}}],
+                ['7',   {{D20_ROLL_DATA.[6]}}],
+                ['8',   {{D20_ROLL_DATA.[7]}}],
+                ['9',   {{D20_ROLL_DATA.[8]}}],
+                ['10',  {{D20_ROLL_DATA.[9]}}],
+                ['11',  {{D20_ROLL_DATA.[10]}}],
+                ['12',  {{D20_ROLL_DATA.[11]}}],
+                ['13',  {{D20_ROLL_DATA.[12]}}],
+                ['14',  {{D20_ROLL_DATA.[13]}}],
+                ['15',  {{D20_ROLL_DATA.[14]}}],
+                ['16',  {{D20_ROLL_DATA.[15]}}],
+                ['17',  {{D20_ROLL_DATA.[16]}}],
+                ['18',  {{D20_ROLL_DATA.[17]}}],
+                ['19',  {{D20_ROLL_DATA.[18]}}],
+                ['20',  {{D20_ROLL_DATA.[19]}}]
+            ]);
+
+            // Instantiate and draw the chart.
+            var chart = new google.visualization.ColumnChart(document.getElementById('d20Chart'));
+            chart.draw(data);
+        }
+
         /*
         function drawChartd4() {}
         function drawChartd6() {}
         function drawChartd8() {}
         function drawChartd10() {}
         function drawChartd12() {}
-        function drawChartd20() {}
         function drawChartd100() {}
         */
 
         google.charts.setOnLoadCallback(drawChartd2);
         google.charts.setOnLoadCallback(drawChartd3);
+        google.charts.setOnLoadCallback(drawChartd4);
+        google.charts.setOnLoadCallback(drawChartd20);
 
         /*
         google.charts.setOnLoadCallback(drawChartd4);
