--- a/styles/dice-stats.css
+++ b/styles/dice-stats.css
@@ -17,3 +17,13 @@
     align-self: center;
     margin: 0 2%;
 }
+
+.chart-dice-stats{
+    background: transparent;
+    width: 600px; 
+    height: 300px; 
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 10;
+}
