--- a/styles/dice-stats.css
+++ b/styles/dice-stats.css
@@ -27,3 +27,12 @@
     margin-right: 0;
     margin-bottom: 10;
 }
+
+.dice-type-title{
+    margin: auto;
+    text-align: center;
+}
+
+.dice-data-table{
+
+}
