--- a/templates/dice-stats-player.hbs
+++ b/templates/dice-stats-player.hbs
@@ -9,29 +9,29 @@
             google.charts.load('current', {packages: ['corechart']});     
         </script>
     </head>
-    <div >
-        <ul >
-            <!--<li>{{localize "DICE_STATS_TEXT.player-stats-button-title"}} : {{testhandle}}</li>-->
-        </ul>
-    </div>
+
+    <!-- Example of using en.json values <li>{{localize "DICE_STATS_TEXT.player-stats-button-title"}} : {{testhandle}}</li>-->
+
 
     <div class="col">
+        <h1 class="dice-type-title">{{PLAYER_NAME}} Roll Data</h1>
         {{#ifDieUsed TOTAL_ROLLS.[0] }}
-        <h1>D-2 (COIN) Stats</h1>
+        <h1 class="dice-type-title">D-2 (COIN) Stats</h1>
             <div id = "d2Chart" class="chart-dice-stats"></div>
             <ul class="flexcol">
-                <li>Total Rolls             {{TOTAL_ROLLS.[0]}}</li>
-                <li>Mean (Avg)              {{MEAN.[0]}}</li>
-                <li>Meadian (Middle Number) {{MEDIAN.[0]}}</li>
-                <li>Mode (Most Common)      {{MODE.[0]}}</li>
+                <li>{{localize DICE_STATS_TEXT.player_data_form.total_rolls}}   {{TOTAL_ROLLS.[0]}}</li>
+                <li>{{localize DICE_STATS_TEXT.player_data_form.mean}}          {{MEAN.[0]}}</li>
+                <li>{{localize DICE_STATS_TEXT.player_data_form.median}}        {{MEDIAN.[0]}}</li>
+                <li>{{localize DICE_STATS_TEXT.player_data_form.mode}}          {{MODE.[0]}}</li>
                 {{#ifStreakIsBlind S_IS_B.[0]}}
-                    <li>Longest Streak          {{STREAK.[0]}}</li>
+                    <li>{{localize DICE_STATS_TEXT.player_data_form.streak}}    {{STREAK.[0]}}</li>
                 {{else}}
-                    <li>Streak Has Blind Rolls. Hideing Streak Info</li>
+                    <li>{{localize DICE_STATS_TEXT.player_data_form.streak_blind}}</li>
                 {{/ifStreakIsBlind}}
             </ul>
-        {{/ifDieUsed}}
         <br>
+        {{/ifDieUsed}}
+        
 
         {{#ifDieUsed TOTAL_ROLLS.[1] }}
         <h1>D-3 (Fate) Stats</h1>
@@ -47,8 +47,9 @@
                     <li>Streak Has Blind Rolls. Hideing Streak Info</li>
                 {{/ifStreakIsBlind}}
             </ul>
-        {{/ifDieUsed}}
         <br>
+        {{/ifDieUsed}}
+        
         
         {{#ifDieUsed TOTAL_ROLLS.[2] }}
         <h1>D-4 Stats</h1>
@@ -64,8 +65,9 @@
                     <li>Streak Has Blind Rolls. Hideing Streak Info</li>
                 {{/ifStreakIsBlind}}
             </ul>
-        {{/ifDieUsed}}
         <br>
+        {{/ifDieUsed}}
+        
         
         {{#ifDieUsed TOTAL_ROLLS.[3] }}
         <h1>D-6 Stats</h1>
@@ -81,8 +83,9 @@
                     <li>Streak Has Blind Rolls. Hideing Streak Info</li>
                 {{/ifStreakIsBlind}}
             </ul>
-        {{/ifDieUsed}}
         <br>
+        {{/ifDieUsed}}
+        
         
         {{#ifDieUsed TOTAL_ROLLS.[4] }}
         <h1>D-8 Stats</h1>
@@ -98,8 +101,9 @@
                     <li>Streak Has Blind Rolls. Hideing Streak Info</li>
                 {{/ifStreakIsBlind}}
             </ul>
-        {{/ifDieUsed}}
         <br>
+        {{/ifDieUsed}}
+        
         
         {{#ifDieUsed TOTAL_ROLLS.[5] }}
         <h1>D-10 Stats</h1>
@@ -115,8 +119,9 @@
                     <li>Streak Has Blind Rolls. Hideing Streak Info</li>
                 {{/ifStreakIsBlind}}
             </ul>
-        {{/ifDieUsed}}
         <br>
+        {{/ifDieUsed}}
+        
         
         {{#ifDieUsed TOTAL_ROLLS.[6] }}
         <h1>D-12 Stats</h1>
@@ -132,25 +137,45 @@
                     <li>Streak Has Blind Rolls. Hideing Streak Info</li>
                 {{/ifStreakIsBlind}}
             </ul>
-        {{/ifDieUsed}}
         <br>
+        {{/ifDieUsed}}
+        
         
         {{#ifDieUsed TOTAL_ROLLS.[7] }}
-        <h1>D-20 Stats</h1>
+        <h1 class="dice-type-title">D-20 Stats</h1>
             <div id = "d20Chart" class="chart-dice-stats"></div>
-            <ul class="flexcol">
-                <li>Total Rolls             {{TOTAL_ROLLS.[7]}}</li>
-                <li>Mean (Avg)              {{MEAN.[7]}}</li>
-                <li>Meadian (Middle Number) {{MEDIAN.[7]}}</li>
-                <li>Mode (Most Common)      {{MODE.[7]}}</li>
-                {{#ifStreakIsBlind S_IS_B.[7]}}
-                    <li>Longest Streak          {{STREAK.[7]}}</li>
-                {{else}}
-                    <li>Streak Has Blind Rolls. Hideing Streak Info</li>
-                {{/ifStreakIsBlind}}
-            </ul>
-        {{/ifDieUsed}}
+            <table>
+                <tr>
+                    <td>Total Rolls:</th>
+                    <td>{{TOTAL_ROLLS.[7]}}</th>
+                    <td></th>
+                </tr>
+                <tr>
+                    <td>Mean (Avg):</th>
+                    <td>{{MEAN.[7]}}</th>
+                    <td></th>
+                </tr>
+                <tr>
+                    <td>Meadian (Middle Number)</th>
+                    <td>{{MEDIAN.[7]}}</th>
+                    <td></th>
+                </tr>
+                <tr>
+                    <td>Mode (Most Common)</th>
+                    <td>{{MODE.[7]}}</th>
+                    <td></th>
+                </tr>
+                <tr>
+                    {{#ifStreakIsBlind S_IS_B.[7]}}
+                    <td>Streak Data:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{STREAK.[7]}}<td>
+                    {{else}}
+                    <td>Streak Is Blind, No Streak Data Visible<td>
+                    {{/ifStreakIsBlind}}
+                </tr>
+            </table>
         <br>
+        {{/ifDieUsed}}
+        
         
         {{#ifDieUsed TOTAL_ROLLS.[8] }}
         <h1>D-20 Stats</h1>
